@@ -25,7 +25,7 @@ if {[encoding system] != "utf-8"} {
 package require Tk
 wm withdraw .
 
-set version "2026-02-02"
+set version "2026-02-17"
 set script [file normalize [info script]]
 set title [file tail $script]
 
@@ -737,7 +737,7 @@ set task.use [lmap task ${task.set} \
 	{if {$task ni ${task.use}} continue;set task}]
 
 labelframe .task -labelanchor w -text "[mc l02]: " -bd 0
-entry .task.name -width 32 -textvariable task.name \
+entry .task.name -width 24 -textvariable task.name \
 	-takefocus 1 -highlightthickness 0
 bind .task.name <Return> task_item_add
 button .task.post -image ArrowDown -command task_list_post
@@ -2275,24 +2275,28 @@ proc process_start {command process} {
   tsend {
     proc cputs {text} "thread::send -async $sid \"console_write {\$text}\""
     proc cputi {text} {cputs "\[---\] $text"}
+
     set mark \[[string toupper $process]\]
     cputi "$m51 $mark"
 
-    fconfigure $fd -blocking 0 -buffering full -buffersize 131072
-    fileevent $fd readable "
+    proc fevent {} {uplevel #0 {
       set text {}
-      while {\[gets $fd line\] >= 0} {lappend text \"\\$mark \$line\"}
-      if {\$text != {}} {cputs \[join \$text \\n\]}
-      if {\[eof $fd\]} {
-	cputi \"$m52 \\$mark\"
-	thread::send -async $sid \"
-	  namespace delete $process
-	  set $process.eof 1
-	  set action 0
-	  \"
-	thread::release
-	close $fd
-      }"
+      while {[gets $fd line] >= 0} {lappend text "$mark $line"}
+      if {$text != {}} {cputs [join $text \n]}
+      if {![eof $fd]} return
+      fileevent $fd readable {}
+      cputi "$m52 $mark"
+      thread::send -async $sid "
+	namespace delete $process
+	set $process.eof 1
+	set action 0
+	"
+      close $fd
+      thread::release
+    }}
+
+    fconfigure $fd -blocking 0 -buffering full -buffersize 131072
+    fileevent $fd readable fevent
   }
 }
 
@@ -2303,15 +2307,15 @@ proc process_kill {process} {
   if {![process_running $process]} return
   namespace upvar $process tid tid pid pid
 
-  thread::send $tid {
-    fileevent $fd readable [regsub {m52} [fileevent $fd readable] {m53}]
-  }
+  thread::send $tid {proc fevent {} [regsub m52 [info body fevent] m53]}
 
-  if {$::tcl_platform(os) == "Windows NT"} {
-    catch {exec TASKKILL /F /PID $pid /T}
-  } elseif {$::tcl_platform(os) == "Linux" || $::tcl_platform(os) == "Darwin"} {
-    if {[catch {exec pgrep -d " " -P $pid} list]} {set list {}}
-    catch {exec kill -SIGKILL $pid {*}$list}
+  switch $::tcl_platform(os) {
+    "Windows NT" {catch {exec TASKKILL /F /PID $pid /T}}
+    "Linux" -
+    "Darwin" {
+      if {[catch {exec pgrep -d " " -P $pid} list]} {set list {}}
+      catch {exec kill -SIGKILL $pid {*}$list}
+    }
   }
 
   if {![info exist ::$process.eof]} {
@@ -2501,7 +2505,10 @@ proc srv_start {} {
 
   set data terminate=true\n
   append data requestlog-format=
-  if {${::log.requests}} {append data "From %{client}a Get %U%q Status %s Size %O bytes Time %{ms}T ms"}
+  if {${::log.requests}} {
+    append data "From %{remote}a:%{local}p Get %U%q "
+    append data "Status %s Size %O bytes Time %{ms}T ms"
+  }
   append data \n
   if {${::tcp.interface} == "localhost"} {append data host=localhost\n}
   set port [set ::tcp.port]
@@ -2598,9 +2605,7 @@ proc srv_stop {} {
   if {![process_running srv]} return
   namespace upvar srv tid tid port port
 
-  thread::send $tid {
-    fileevent $fd readable [regsub "action" [fileevent $fd readable] "{}"]
-  }
+  thread::send $tid {proc fevent {} [regsub action [info body fevent] "{}"]}
 
   set url http://127.0.0.1:$port/terminate
   if {![catch {::http::geturl $url} token]} {
@@ -2635,6 +2640,8 @@ proc mtb_start {} {
     foreach item ${::mtb_args} {puts $fdo $item}
     close $fdo
     lappend command --launcher.ini "$::tmpdir/$mtb_ini"
+  } else {
+    lappend command {*}$::mtb_args
   }
   if {$::iso_639_1 != "en"} {lappend command -nl $::locale}
 
@@ -2644,10 +2651,6 @@ proc mtb_start {} {
 
   process_start $command mtb
 
-  if {$::tcl_platform(os) == "Windows NT" && [process_running mtb]} {
-    namespace upvar mtb tid tid
-    thread::send $tid {fconfigure $fd -translation binary}
-  }
 }
 
 # Request the application to terminate
@@ -2695,7 +2698,7 @@ proc mtb_stop {} {
     # Send "quit" to application (AppleScript)
     set script "tell application \"MyTourbook\" to quit saving yes"
     catch {exec osascript -e $script}
-   
+
   }
 
   # Give process some time (max $count sec) to terminate itself
